@@ -27,6 +27,7 @@
 #include "internal_functions_registry.h"
 #include "php_standard.h"
 #include "php_math.h"
+#include "http.h"
 #include "php_incomplete_class.h"
 #include "ext/standard/info.h"
 #include "ext/session/php_session.h"
@@ -429,6 +430,7 @@ function_entry basic_functions[] = {
 	PHP_FE(urldecode,														NULL)
 	PHP_FE(rawurlencode,													NULL)
 	PHP_FE(rawurldecode,													NULL)
+	PHP_FE(http_build_query,												NULL)
 
 #ifdef HAVE_SYMLINK
 	PHP_FE(readlink,														NULL)
