@@ -25,6 +25,7 @@ PHP                                                                        NEWS
   . pg_version(). (Marcus)
   . dbase_get_header_info(). (Zak)
   . snmp_read_mib(). (Jani)
+  . http_build_query(). (Sara)
 - Added "resume_pos" context option to "ftp://" wrapper. (Sara)
 - Added optional parameter to OCIWriteTemporaryLob() to specify the type of LOB
   (Patch by Novicky Marek <novicky@aarongroup.cz>). (Thies)
